--- a/lab2/sketching.ipynb
+++ b/lab2/sketching.ipynb
@@ -5,6 +5,7 @@
    "source": "# Matrix Sketching #",
    "metadata": {
     "cell_id": "87a7e589-7406-4b56-91b7-f176ab2760c5",
+    "deepnote_cell_height": 82,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -13,6 +14,7 @@
    "source": "#### Authors:\nv1.0 (2019 Spring) Justin Hong, Vipul Gupta, and Kannan Ramchandran",
    "metadata": {
     "cell_id": "00001-6884afc6-d762-48cb-b57a-54cb5e5046c9",
+    "deepnote_cell_height": 88.390625,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -21,6 +23,7 @@
    "source": "## Introduction",
    "metadata": {
     "cell_id": "00002-dd7cc543-4319-40a5-9075-3bf439761dab",
+    "deepnote_cell_height": 70,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -29,6 +32,7 @@
    "source": "Sketching is an efficient matrix computation technique from randomized linear algebra with a wide range of applications like low-rank approximation, least squares, etc. During sketching, a large matrix is compressed into a smaller matrix by multiplying it by a random matrix. The smaller matrix can be then used as a proxy for the large matrix for efficient (but approximate) computation. In this lab, we will look at sketching-based multiplication of two large matrices.",
    "metadata": {
     "cell_id": "00003-69486943-6e3f-4da5-84e8-8424b3cc7572",
+    "deepnote_cell_height": 97.171875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -37,6 +41,7 @@
    "source": "## 1) Sketch Implementations ##",
    "metadata": {
     "cell_id": "00004-78a5499b-585d-438a-a5bf-21c33b813a18",
+    "deepnote_cell_height": 70,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -45,6 +50,7 @@
    "source": "Gaussian-sketch and count-sketch are two popular sketching methods in the literature. You will be implementing both of them and analyzing their characteristics and performance on test data. To check your implementation, run the code blocks below the function definition to visualize the expectations and variances of each entry in $\\mathbf S^T\\mathbf S$ for your sketching matrix $\\mathbf S$. They should parallel the results from your HW problem on matrix sketching.",
    "metadata": {
     "cell_id": "00005-6c25dba9-0fce-456c-bad7-0565d24d27ad",
+    "deepnote_cell_height": 97.171875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -60,10 +66,11 @@
     "source_hash": "56b94ef",
     "execution_start": 1644557079577,
     "execution_millis": 1461,
+    "deepnote_cell_height": 135,
     "deepnote_cell_type": "code"
    },
    "source": "%matplotlib inline\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport time",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -71,6 +78,7 @@
    "source": "### Gaussian Sketch###\nAs seen in your homework, the Gaussian sketch is simply a $d\\times n$ matrix where each element $S_{ij} \\sim \\frac{1}{\\sqrt{d}} Normal(0,1)$. ",
    "metadata": {
     "cell_id": "00007-bcb94382-6b8b-44f1-a3d4-82a0e1bda180",
+    "deepnote_cell_height": 103.109375,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -86,10 +94,11 @@
     "source_hash": "151c633a",
     "execution_start": 1644557136125,
     "execution_millis": 2,
+    "deepnote_cell_height": 99,
     "deepnote_cell_type": "code"
    },
    "source": "def gaussian_sketch(d, n):\n    return np.random.randn(d, n) / np.sqrt(d)",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -97,6 +106,7 @@
    "source": "As we derived in the homework solution, the element-wise expectation and variance of $\\hat{\\textbf{I}} = \\textbf{S}^T\\textbf{S}$ are\n$$\n   \\mathbb{E}[\\hat I_{ij}] = \n\\begin{cases}\n    1, & \\text{if} ~i=j\\\\\n    0, & \\text{otherwise}.\n\\end{cases}\n~~~~~~~~~~\n\\text{Var}[\\hat I_{ij}] = \n\\begin{cases}\n    2/d, & \\text{if} ~i=j\\\\\n    1/d, & \\text{otherwise}.\n\\end{cases}\n$$\nThe above expressions for Gaussian sketch can be verified by generating some nice visualizations of the variance and expectations as shown below. ",
    "metadata": {
     "cell_id": "00009-50d84102-84ff-4bb5-a2b0-070adebf041d",
+    "deepnote_cell_height": 153.671875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -112,10 +122,11 @@
     "source_hash": "9ad1cc8e",
     "execution_start": 1644557137681,
     "execution_millis": 1,
+    "deepnote_cell_height": 405,
     "deepnote_cell_type": "code"
    },
    "source": "def visualize(fn, n=50, d=30, n_samples=50):\n    # Sample generation\n    sketch_matrices = [fn(d, n) for _ in range(n_samples)]\n    sketch_matrices = np.stack(list(mtx.T.dot(mtx) for mtx in sketch_matrices), axis=2)\n    expect_data = np.mean(sketch_matrices, axis=2)\n    var_data = np.var(sketch_matrices, axis=2)\n    \n    # Visualization\n    fig, (ax1, ax2) = plt.subplots(1,2, figsize=(15, 4))\n    fig.tight_layout()\n    \n    im1 = ax1.imshow(expect_data, cmap='YlGn')\n    cbar1 = ax1.figure.colorbar(im1, ax=ax1)\n    cbar1.ax.set_ylabel(\"Expectation\", rotation=-90, va=\"bottom\")\n    \n    im2 = ax2.imshow(var_data, cmap='YlGn')\n    cbar2 = ax2.figure.colorbar(im2, ax=ax2)\n    cbar2.ax.set_ylabel(\"Variance\", rotation=-90, va=\"bottom\")\n    return",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -129,10 +140,11 @@
     "deepnote_output_heights": [
      280
     ],
+    "deepnote_cell_height": 377,
     "deepnote_cell_type": "code"
    },
    "source": "visualize(gaussian_sketch)",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [
     {
      "data": {
@@ -155,6 +167,7 @@
    "source": "Note how the diagonal entries of the $n\\times n$ matrix $\\mathbf{\\hat I}$ are close to one and non-diagonal entries are close to zero in expectation. Similarly, the variance of each element in $\\mathbf{\\hat I}$ is small (diagonal entries have more variance than non-diagonal entries as predicted by our expression for variance of $\\mathbf{\\hat I}$).",
    "metadata": {
     "cell_id": "00012-102f7676-9954-4ae1-b518-fbe67f8b1ff8",
+    "deepnote_cell_height": 74.9375,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -163,6 +176,7 @@
    "source": "### Count Sketch###\nThe count sketch is slightly more involved.\nFor each column $j\\in [1,n]$ of $\\textbf{S}$, choose a row $i$ uniformly randomly from $[1,d]$ such that \n$$\n   S_{ij}= \n\\begin{cases}\n    1,& \\text{with probability} ~0.5\\\\\n    -1,              & \\text{with probability}~ 0.5\n\\end{cases}\n$$\nand assign $S_{kj} = 0$ for all $k\\neq i$. An example of a $3\\times 8$ count-sketch is \n$$ \\textbf{S} = \\begin{bmatrix} \n    0 & -1 & 1 & 0 & 0 & 1 & 0 & 0\\\\\n    1 & 0 & 0 & 0 & -1 & 0 & -1 & 0\\\\\n    0 & 0 & 0 & -1 & 0 & 0 & 0 & -1\n\\end{bmatrix}\n$$ \n\nNext, we implement the function that generates a count-sketch (this we have implemented for you).",
    "metadata": {
     "cell_id": "00013-6aea8159-2440-4bda-8764-ece95c9d41f8",
+    "deepnote_cell_height": 282.765625,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -178,10 +192,11 @@
     "source_hash": "a0415762",
     "execution_start": 1644557167460,
     "execution_millis": 1,
+    "deepnote_cell_height": 243,
     "deepnote_cell_type": "code"
    },
    "source": "def count_sketch(d, n):\n    sketch = np.zeros((d, n))\n    \"\"\"\n    mappings: n-dimesional vector (j-th entry denotes which row-element is non-zero for the j-th column) \n    flips: denotes whether the non-zero element is 1 or -1\n    \"\"\"\n    mappings = np.random.randint(0, d, size=(1, n))\n    flips = np.random.choice([-1,1], size=(1, n))\n    sketch[mappings, np.arange(n)] = flips\n    return sketch",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -189,6 +204,7 @@
    "source": "The element-wise expectation and variance of the matrix $\\hat{\\textbf{I}} = \\textbf{S}^T\\textbf{S}$ are (see homework solution)\n$$\n   \\mathbb{E}[\\hat I_{ij}] = \n\\begin{cases}\n    1, & \\text{if} ~i=j\\\\\n    0, & \\text{otherwise}.\n\\end{cases}\n~~~~~~~~~~\n\\text{Var}[\\hat I_{ij}] = \n\\begin{cases}\n    0, & \\text{if} ~i=j\\\\\n    1/d, & \\text{otherwise}.\n\\end{cases}\n$$\nAgain, we verify the above expressions for count sketch by generating similar visualizations below. ",
    "metadata": {
     "cell_id": "00015-9eeca00f-8758-4532-a154-c961edf68772",
+    "deepnote_cell_height": 153.671875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -203,10 +219,11 @@
     "deepnote_output_heights": [
      282
     ],
+    "deepnote_cell_height": 379,
     "deepnote_cell_type": "code"
    },
    "source": "visualize(count_sketch)",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [
     {
      "data": {
@@ -229,6 +246,7 @@
    "source": "Note how the matrix $\\hat{\\textbf{I}}$ is close to identity in expectation. The variance of the diagonal entries is exactly zero, while the non-diagonal variance is small.",
    "metadata": {
     "cell_id": "00017-5b6361e3-569c-4161-9f88-f0e63a382f0d",
+    "deepnote_cell_height": 52.46875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -237,6 +255,7 @@
    "source": "## 2) Sketched Matrix Multiplication ##",
    "metadata": {
     "cell_id": "00018-e9db37d6-868c-445b-a3e3-9c3f9bda31cb",
+    "deepnote_cell_height": 70,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -245,6 +264,7 @@
    "source": "Next, we will discuss approximate matrix multiplication using sketching. We will compute the matrix product $\\mathbf A^T\\mathbf A$, where $\\mathbf A \\in \\mathcal{R}^{n\\times m}$, using Gaussian and count sketches and compare it with the exact product.\n\nAs can be noted from the expression of variance of $\\mathbf{\\hat I} = \\textbf{S}^T\\textbf{S}$, the accuracy of the sketching-based computation increases as the sketch dimension $d$ increases, that is, $\\mathbf{\\hat I}$ closely approximates $\\mathbf I$. To see how well sketching approximates the matrix product $\\mathbf A^T\\mathbf A$, we will use the Frobenius norm error $\\parallel{}(\\mathbf{SA})^T\\mathbf{SA} - \\mathbf{A}^T\\mathbf A \\parallel_F$ as a metric for distance from the actual product. More specifically, we define percentage error in sketched matrix multiplication as\n$$Error (\\%) = 100\\times\\frac{\\parallel{}(\\mathbf{SA})^T\\mathbf{SA} - \\mathbf{A}^T\\mathbf A \\parallel_F}{\\parallel{}\\mathbf{A}^T\\mathbf A \\parallel_F}.$$\nOur definition of error is one way to capture the element-wise similarity between the two matrices.\n\n(Note: The frobenius norm of a matrix $\\mathbf{M}$ is $\\|\\mathbf{M}\\|_F = \\sqrt{\\sum_{i,j} M_{ij}^2}$).\n\nNext, we will calculate the compute times for sketched matrix multiplication and compare it with the time required for exact multiplication.",
    "metadata": {
     "cell_id": "00019-b23326b4-243b-4dea-8050-e8cd2ad21124",
+    "deepnote_cell_height": 265.6875,
     "deepnote_cell_type": "markdown"
    }
   },
@@ -260,10 +280,11 @@
     "source_hash": "a512c456",
     "execution_start": 1644557176357,
     "execution_millis": 561,
+    "deepnote_cell_height": 135,
     "deepnote_cell_type": "code"
    },
    "source": "# Generate a random matrix A of size n x m\nn = 15000\nm = 1000\nA = np.random.normal(50, 100, size = (n, m))",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -278,10 +299,11 @@
     "source_hash": "2ae70d95",
     "execution_start": 1644558649897,
     "execution_millis": 2,
+    "deepnote_cell_height": 189,
     "deepnote_cell_type": "code"
    },
    "source": "def calc_gauss_sketch(d, A):\n    \"\"\"\n    Calculates Gaussian-sketch of A, that is S*A, with sketch-dimension d\n    \"\"\"\n    ##### Write your CODE here (use the function gaussian_sketch). Should take one or two lines at most.\n\n    return gaussian_sketch(d, A.shape[0]) @ A ",
-   "execution_count": 30,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -289,12 +311,11 @@
    "source": "Note that Gaussian sketch can be used to find a smaller matrix that can be used as a proxy for $\\mathbf A$, but it does not help in reducing computation time for matrix multiplication. Gaussian sketching $\\mathbf A$ requires $O(mnd)$ time.\n\nHowever, count sketch has a special sparse structure, and we can utilize it to calculate the sketch $\\mathbf C = \\mathbf {SA}$ in $O(mn)$ time. This is done by directly producing the sketched matrix from $A$ rather than producing $S$ explicitly. In the function \"calc_count_sketch\" defined below, use the following algorithm to calculate $\\mathbf C = \\mathbf {SA}$ directly from $\\mathbf A$.\n<br>\n1. Set $\\mathbf C$ to be an all zeros matrix in $\\mathcal{R}^{d\\times m}$.\n2. For each row of $A$, flip the sign with probability 0.5, and then add it to a randomly picked row of $C$.\n\n\nNote that the graphs generated below might vary depending the machine that this notebook is run on. We're expecting count_sketch to be slightly faster or around the same as exact multiplication, but the difference might vary depending on your laptop!",
    "metadata": {
     "cell_id": "00022-6f1465d0-d383-4fcc-8d04-1f49934e630b",
+    "deepnote_cell_height": 276.515625,
     "deepnote_cell_type": "markdown"
    }
   },
   {
-   "outputs": [],
-   "execution_count": 37,
    "cell_type": "code",
    "metadata": {
     "collapsed": true,
@@ -306,9 +327,12 @@
     "source_hash": "eb663f76",
     "execution_start": 1644559654588,
     "execution_millis": 1,
+    "deepnote_cell_height": 387,
     "deepnote_cell_type": "code"
    },
-   "source": "def calc_count_sketch(d, A):\n    \"\"\"\n    Calculates count-sketch of A, that is S*A, with sketch-dimension d using the algorithm above\n    \"\"\"\n\n    C = np.zeros((d, A.shape[1]))\n    \n    for row in A:\n        flip = np.random.random(1) > 0.5\n\n        if flip:\n            row = -row\n\n        new_row_index = np.random.randint(d)\n\n        C[new_row_index] += row\n    \n    return C"
+   "source": "def calc_count_sketch(d, A):\n    \"\"\"\n    Calculates count-sketch of A, that is S*A, with sketch-dimension d using the algorithm above\n    \"\"\"\n\n    C = np.zeros((d, A.shape[1]))\n    \n    for row in A:\n        flip = np.random.random(1) > 0.5\n\n        if flip:\n            row = -row\n\n        new_row_index = np.random.randint(d)\n\n        C[new_row_index] += row\n    \n    return C",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -322,10 +346,11 @@
     "source_hash": "7cac837b",
     "execution_start": 1644558892032,
     "execution_millis": 1,
+    "deepnote_cell_height": 138,
     "deepnote_cell_type": "code"
    },
    "source": "def calc_error(exact_product, sketched_product):\n    \"\"\"\n    Calculate percentage error in Frobenius norm as defined above\n    \"\"\"\n    return 100*np.linalg.norm(exact_product - sketched_product, ord='fro')/np.linalg.norm(exact_product, ord='fro')",
-   "execution_count": 33,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -340,15 +365,15 @@
     "source_hash": "d9a80612",
     "execution_start": 1644558916407,
     "execution_millis": 1,
+    "deepnote_cell_height": 1395,
     "deepnote_cell_type": "code"
    },
    "source": "def generate_plots(A, num_samples = 5):\n    \"\"\"\n    This function generates time and error plots for sketched matrix multiplication\n    \"\"\"\n    n,m = A.shape\n    sketch_dims = [int(m*x/4) for x in range(5,12,1)]\n    print(\"Sketch dimensions considered\")\n    print(list(sketch_dims))\n    \n    a = len(sketch_dims)\n    g_time = np.zeros(a)\n    g_error = np.zeros(a)\n    c_time = np.zeros(a)\n    c_error = np.zeros(a)\n    iter = 0\n       \n    ## Calculating exact product\n    t1 = time.time()\n    exact_product = (A.T).dot(A)\n    t_exact = time.time() - t1\n    \n    for d in sketch_dims:\n        for _ in range(num_samples):\n            ## Gaussian sketch\n            t2 = time.time()\n            g_sketch = calc_gauss_sketch(d, A)\n            g_product = g_sketch.T.dot(g_sketch)\n            g_time[iter] += time.time() - t2\n            g_error[iter] += calc_error(exact_product, g_product)\n\n            ## Count sketch\n            t3 = time.time()\n            c_sketch = calc_count_sketch(d, A)\n            c_product = c_sketch.T.dot(c_sketch)\n            c_time[iter] += time.time() - t3\n            c_error[iter] += calc_error(exact_product, c_product)\n        iter += 1 \n    \n    ## Averaging error over all sample points\n    g_time = g_time/num_samples\n    g_error = g_error/num_samples\n    c_time = c_time/num_samples\n    c_error = c_error/num_samples\n    \n    fig, ax = plt.subplots(1,1,figsize=(12, 4))\n    ax.plot(sketch_dims, g_error, label=\"Gaussian Sketch\")\n    ax.plot(sketch_dims, c_error, label=\"Count Sketch\")\n    ax.legend(loc=\"best\")\n    ax.set_xlabel(\"Sketch dimension (d)\")\n    ax.set_ylabel(\"Percentage Error\")\n    ax.set_ylim(bottom=0)\n    ax.grid(True)\n    ax.set_title(\"Error for Count and Gaussian sketches\")\n    \n    fig, (ax1, ax2) = plt.subplots(1,2,figsize=(12, 4))\n    ax1.plot(sketch_dims, g_time, label=\"Gaussian Sketch\")\n    ax1.plot(sketch_dims, t_exact*np.ones(len(sketch_dims)), label=\"Exact multiplication\")\n    ax1.legend(loc=\"best\")\n    ax1.set_xlabel(\"Sketch dimension (d)\")\n    ax1.set_ylabel(\"Time to compute product (seconds)\")\n    ax1.set_ylim(bottom=0)\n    ax1.grid(True)   \n    ax1.set_title(\"Compute time for Gaussian-sketched Multiply\")\n    \n    ax2.plot(sketch_dims, c_time, label=\"Count Sketch\")\n    ax2.plot(sketch_dims, t_exact*np.ones(len(sketch_dims)), label=\"Exact multiplication\")\n    ax2.legend(loc=\"best\")\n    ax2.set_xlabel(\"Sketch dimension (d)\")\n    ax2.set_ylabel(\"Time to compute product (seconds)\")\n    ax2.set_ylim(bottom=0, top=ax2.get_ylim()[1]*1.15)\n    ax2.grid(True)   \n    ax2.set_title(\"Compute time for Count-sketched Multiply\")\n    \n    plt.show()",
-   "execution_count": 35,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "source": "### This might take a few minutes to run, reduce n_samples to reduce running time (especially while debugging)\ngenerate_plots(A)",
    "metadata": {
     "cell_id": "54784395-cc77-4f9f-9c4b-e260edf7e3f0",
     "tags": [],
@@ -361,8 +386,11 @@
      280,
      280
     ],
+    "deepnote_cell_height": 772.375,
     "deepnote_cell_type": "code"
    },
+   "source": "### This might take a few minutes to run, reduce n_samples to reduce running time (especially while debugging)\ngenerate_plots(A)",
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -397,8 +425,7 @@
      },
      "output_type": "display_data"
     }
-   ],
-   "execution_count": 36
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,6 +440,7 @@
    "source": "O(mn + nd^2)",
    "metadata": {
     "cell_id": "00028-d3df1f0e-abfa-4194-b04e-0801debba234",
+    "deepnote_cell_height": 37,
     "deepnote_cell_type": "markdown"
    }
   },
